// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardGenericViewSmall InfoView Subtitle should not render as a link when isLink=false 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #A5ADBA;
  font-size: 12px;
  line-height: 15px;
}

<div
  className="c0"
/>
`;

exports[`CardGenericViewSmall InfoView Subtitle should render as a link when isLink=true 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #A5ADBA;
  font-size: 12px;
  line-height: 15px;
  color: #0052CC;
}

.media-card:hover .c0 {
  color: #0065FF;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.media-card:active .c0 {
  color: #0747A6;
}

<div
  className="c0"
/>
`;
